--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ button {
     height: 45px;
     border-radius: 50px;
     outline: none;
-    margin: 5%;
+    margin: 0 3%;
     padding: 5% 8%;
     border: 1px solid blueviolet;
 }
@@ -103,6 +103,7 @@ button {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
     color: blueviolet;
+    cursor: pointer;
 }
 
 .remove-btn {
